--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
+    "@fortawesome/fontawesome-free": "6.2.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
@@ -19,6 +21,7 @@
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
+    "sass": "1.55.0",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vue-tsc": "^1.0.8"
