--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/fontawesome-free": "6.2.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "dotenv": "^16.0.3"
+
   },
   "devDependencies": {
     "@types/node": "^16.11.68",
