--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   ],
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "dotenv": "^16.0.3",
+    "mongodb": "^4.12.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
