--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Web Home Peter",
+  "name": "webhomepeter",
   "version": "1.0.0",
   "description": "",
   "author": "Peter Navarrete",
