Revert "petty typo"
This reverts commit f1c9b10eb7d0f1fd62c97b565e020595dd874c25.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webhomepeter",
+  "name": "Web Home Peter",
   "version": "1.0.0",
   "description": "",
   "author": "Peter Navarrete",
