--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "npm i && npm i -ws && npm run build -ws",
     "dev": "nodemon --watch server server/server.js",
-    "start": "node server/server.js"
+    "start": "node server/server.js && npm run dev -ws"
   },
   "workspaces": [
     "client"
