--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,17 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "bulma": "^0.9.4",
     "@fortawesome/fontawesome-free": "6.2.0",
+    "bulma": "^0.9.4",
+    "dotenv": "^16.0.3",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
-    "dotenv": "^16.0.3"
+    "express": "^4.18.2"
 
   },
   "devDependencies": {
-    "@types/node": "^16.11.68",
+    "@types/node": "^16.18.4",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/tsconfig": "^0.1.3",
