--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,13 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "bulma": "^0.9.4",
     "@fortawesome/fontawesome-free": "6.2.0",
+    "@oruga-ui/oruga-next": "^0.5.9",
+    "bulma": "^0.9.4",
+    "dotenv": "^16.0.3",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5",
-    "dotenv": "^16.0.3"
-
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^16.11.68",
